chore: moves colors to variables

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-/* Estilos generales */
+:root {
+  --background-color: #000000;
+  --text-color: #9ad79b;
+  --border-color: #9ad79b;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -11,20 +16,20 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: #000000;
-  color: #9ad79b;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 footer,
 .content,
 .features,
 .sidebar {
-  border: 1px dotted #9ad79b;
+  border: 1px dotted var(--border-color);
   padding: 18px 22px;
 }
 
 body {
-  min-height: 100vh;
+  min-height: 200vh;
   position: relative;
 }
 
@@ -32,9 +37,9 @@ header {
   position: sticky;
   top: 0;
   left: 0;
-  background: #000000;
+  background: var(--background-color);
   width: 100%;
-  border: 1px dotted #9ad79b;
+  border: 1px dotted var(--border-color);
   margin-bottom: 20px;
   padding: 8px;
 }
